advanced-ec2-cf/07_ec2-with-userdata.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Template for kops control instance
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: DBS-AWS-NV
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    
  UData:
    Description : User Data Var
    Type : String
    Default: 'touch hallo.txt'
  
  InstanceType:
    Description: Kops Machine EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m1.small
      - m1.medium
    ConstraintDescription: must be a valid EC2 instance type.
  
  AMI:
    Description: the machine image
    Type: String
    Default: ami-0922553b7b0369273

Resources:
  ServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      Tags:
        -
         Key: Name
         Value: EC2-CF
      UserData: !Base64 
        'Fn::Join':
            - ''
            - - |
                #!/bin/bash
              - |
                echo ">>>>>>>>>>>>> UPDATE <<<<<<<<<<<<<"
              - export USR_DATA='
              - !Ref UData
              - |
                '
              - | 
                  cd /home/ec2-user
              - |
                  touch hallo.txt
              - |
                  echo $USR_DATA
              - |
                  echo $USR_DATA > user_data.sh
              - |
                  chmod +x user_data.sh
              - |
                  source user_data.sh
              - |
                  echo ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<"



        
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 80 and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
